--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tip Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Tip Calculator</title>
     <!-- link the js page here?-->
 </head>
 <body>
+    <div class="tipCalc">
 
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
