--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <label for="billTotal">Bill Total:</label>
             <input type="text" id="billTotal" required>
 
-            <label for="tipSlider>Tip: </label>
-            <input type="range" id="tipSlider" min="o" max="100">
+            <label for="tipSlider">Tip:</label>
+            <input type="range" id="tipSlider" min="0" max="100">
 
             <label for="tipPercentage">Tip Percentage:</label>
             <input type="text" id="tipPercentage" disabled>
